src/test/deca/context/valid/expressions/print_exp.deca
// Description:
//    Test de fonction print pour une expression complete
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur 
//    context : pas d'erreur 
//
// Historique:
//    cree le 12/01/2022

{

    println(2+2);
    print(1-2);
    print(5+11);
    print(5*2);
    print(3/2);
    print(4%2);
    print(-3);


}