src/test/deca/context/invalid/control_structures/while_condition_invalid.deca
// Description:
//    Test de while avec une fausse condition
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: erreur
//     --> while(1) ne marche pas    
//
// Historique:
//    cree le 14/01/2022

{
    while(2+2+) 
    {
        print("salut") ;
    }
}